# fritzbox-thermostat-triggers

./: .gitignore  LICENSE  README.md  manage.py  manifest.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  settings.ini.example
fritzbox_thermostat_triggers/: asgi.py  settings.py  urls.py  wsgi.py
fritzbox_thermostat_triggers/triggers/: admin.py  apps.py  models.py  tests.py  views.py
fritzbox_thermostat_triggers/triggers/management/commands/: sync_and_trigger_thermostats.py
fritzbox_thermostat_triggers/triggers/migrations/: 0001_initial.py  0002_alter_thermostat_name_thermostatlog.py  0003_thermostatlog_no_op.py  0004_trigger_name.py  0005_rename_triggered_trigger_enabled.py  0006_alter_trigger_enabled.py  0007_trigger_recurring.py  0008_trigger_recur_on_friday_trigger_recur_on_monday_and_more.py  0009_remove_trigger_recurring.py  0010_alter_trigger_recur_on_friday_and_more.py  0011_remove_thermostatlog_triggered_at.py
fritzbox_thermostat_triggers/triggers/static/: pico.1.5.11.min.css
fritzbox_thermostat_triggers/triggers/static/icons/: icon.kra
fritzbox_thermostat_triggers/triggers/templates/triggers/: _trigger_card.html  base.html  logs.html  trigger_card.html  triggers.html
