[project]
name = "fritzbox-thermostat-triggers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-htmx>=1.27.0",
    "pyfritzhome>=0.6.20",
    "python-decouple>=3.8",
    "sentry-sdk>=2.56.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "model-bakery>=1.23.4",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
]
